--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
 
             <!-- service container right side starts -->
             <div class="service-right-container">
-                
+                    <div class="skill">
+                        <img src="/image/icons/insta.png" alt="">
+                        <p>website Developmet</p>
+                    </div>
+                    
+                    <div class="skill">
+                        <img src="/image/icons/insta.png" alt="">
+                        <p>website Developmet</p>
+                    </div>
             </div>
         </div>
     </main>
