new section added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
 
     <main>
+        <!-- service section starts -->
         <div class="service-container"> 
             <div class="service-left-container">
                 <button class="service-primary-btn">Service List</button>
@@ -47,7 +48,7 @@
 
                 <div class="author-profile">
                     <img src="/image/icons/facebook.png" alt="keuna">
-                    <div class="author-decription">
+                    <div class="author-description">
                         <p>George Smith</p>
                         <p>CEO, Director</p>
                     </div>
@@ -59,15 +60,43 @@
 
             <!-- service container right side starts -->
             <div class="service-right-container">
-                    <div class="skill">
-                        <img src="/image/icons/insta.png" alt="">
-                        <p>website Developmet</p>
+                <div class="skillset-1">
+                    <div class="box">
+                        <img class="icon" src="/image/icons/mongo.png" alt="">
+                        <h3>Web Development</h3>
                     </div>
-                    
-                    <div class="skill">
-                        <img src="/image/icons/insta.png" alt="">
-                        <p>website Developmet</p>
+                    <div class="box">
+                        <img class="icon" src="/image/icons/mongo.png" alt="">
+                        <h3>Web Development</h3>
                     </div>
+                </div>
+                <div class="skillset-2">
+                    <div class="box">
+                        <img class="icon" src="/image/icons/mongo.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
+                    <div class="box">
+                        <img class="icon" src="/image/icons/mongo.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- service section ends -->
+
+        <div class="service-contact-container">
+            <div class="service-contact-container-phone">
+                <img class="icon" src="/image/icons/twitter.png" alt="">
+                <p>get free consultation</p>
+                <h1>987 233 0000</h1>
+            </div>
+
+            <div class="service-contact-container-about">
+
+            </div>
+
+            <div class="service-contact-container-button">
+
             </div>
         </div>
     </main>
