appointment section added

--- a/index.html
+++ b/index.html
@@ -83,22 +83,29 @@
             </div>
         </div>
         <!-- service section ends -->
+        <!-- APPOINTMENT SECTION STARTS -->
 
-        <div class="service-contact-container">
-            <div class="service-contact-container-phone">
-                <img class="icon" src="/image/icons/twitter.png" alt="">
-                <p>get free consultation</p>
-                <h1>987 233 0000</h1>
+        <div class="appointment-container">
+            <div class="phone-call">
+              <img class="icon" src="/image/icons/nodejs.png" alt="" />
+              <h3>
+                GET A FREE <br> CONSULTATION <br />
+                987 233 0000
+              </h3>
             </div>
-
-            <div class="service-contact-container-about">
-
+            <div class="appointment-desc">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus dolorum earum recusandae eaque nihil hic obcaecati
+                soluta officia? Minus, illum?
+              </p>
             </div>
-
-            <div class="service-contact-container-button">
-
+            <div class="appointent-btn">
+              <button class="btn">make an appointment</button>
             </div>
-        </div>
+          </div>
+
+          <!-- appointment section ends -->
     </main>
 
     <footer>
