blog section added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,44 @@
           </div>
 
           <!-- appointment section ends -->
+
+          <!-- blog section -->
+          <div class="blog-container">
+            <h1 class="blog-title"><span class="blog">Blog</span> & News From <br>Us!</h1>
+
+            <div class="blog-cards">
+                <div class="card">
+                    <img src="/image/icons/nodejs.png" alt="">
+                    <h5>Lorem ipsum dolor sit,</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="/image/icons/nodejs.png" alt="">
+                    <h5>Lorem ipsum dolor sit,</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="/image/icons/nodejs.png" alt="">
+                    <h5>Lorem ipsum dolor sit,</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="/image/icons/nodejs.png" alt="">
+                    <h5>Lorem ipsum dolor sit,</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
+                    </p>
+                </div>
+            </div>
+          </div>
+
+
     </main>
 
     <footer>
