footer section added

--- a/index.html
+++ b/index.html
@@ -114,40 +114,69 @@
             <div class="blog-cards">
                 <div class="card">
                     <img src="/image/icons/nodejs.png" alt="">
-                    <h5>Lorem ipsum dolor sit,</h5>
+                    <h2>Lorem ipsum dolor sit,</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
                     </p>
                 </div>
                 <div class="card">
                     <img src="/image/icons/nodejs.png" alt="">
-                    <h5>Lorem ipsum dolor sit,</h5>
+                    <h2>Lorem ipsum dolor sit,</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
                     </p>
                 </div>
                 <div class="card">
                     <img src="/image/icons/nodejs.png" alt="">
-                    <h5>Lorem ipsum dolor sit,</h5>
+                    <h2>Lorem ipsum dolor sit,</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
                     </p>
                 </div>
                 <div class="card">
                     <img src="/image/icons/nodejs.png" alt="">
-                    <h5>Lorem ipsum dolor sit,</h5>
+                    <h2>Lorem ipsum dolor sit,</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, asperiores dolorem. Laboriosam explicabo amet doloribus.
                     </p>
                 </div>
             </div>
+            <!-- blog ends here -->
           </div>
-
-
     </main>
 
     <footer>
+        <div class="footer-container">
+            <div class="footer-img">
+                <div class="footer-logo">
+                    <img src="/image/icons/nodejs.png" alt="">
+                    <h1>Agence.</h1>
+                </div>
+                <p class="footer-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt at optio sapiente assumenda, blanditiis a!</p>
+            </div>
 
+            
+            <div class="footer-links">
+                <h3 class="links-head">Useful Links</h3>
+                <li>about</li>
+                <li>about</li>
+                <li>about</li>
+                <li>about</li>
+            </div>
+            <div class="footer-support">
+                <h3 class="support-head">support</h3>
+                <li>about</li>
+                <li>about</li>
+                <li>about</li>
+                <li>about</li>                
+            </div>
+            <div class="footer-contact">
+                <h3 class="contact">Contact info</h3>
+                <p>feel freefreefreefreefree!!!</p>
+                <p>feel freefreefreefreefree!!!</p>
+                <p>feel freefreefreefreefree!!!</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
